--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "langchain-core>=0.2.0",
     "langchain-openai>=0.1.0",
     "httpx>=0.24.0",
+    "matplotlib>=3.9.4",
 ]
 
 [project.optional-dependencies]
