--- a/agent/requirements.txt
+++ b/agent/requirements.txt
@@ -11,6 +11,9 @@ langchain>=0.2.0
 langchain-core>=0.2.0
 langchain-openai>=0.1.0
 
+# Data visualization
+matplotlib>=3.7.0
+
 # Development dependencies
 pytest>=7.0.0
 pytest-asyncio>=0.21.0
