--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "plotly.js": "^2.35.2",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-plotly.js": "^2.6.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
@@ -28,8 +30,10 @@
   "devDependencies": {
     "@tsconfig/strictest": "^2.0.8",
     "@types/node": "^24.10.1",
+    "@types/plotly.js": "^2.12.29",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/react-plotly.js": "^2.6.3",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   },
